--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,11 +4,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-              android:background="#804CAE50"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Controlador.Login">
 
     <ScrollView
@@ -16,7 +11,11 @@
         android:layout_height="match_parent"
         android:id="@+id/scrollView"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:paddingLeft="20sp"
+        android:paddingTop="20sp"
+        android:paddingRight="20sp"
+        android:paddingBottom="20sp">
 
         <LinearLayout
             android:orientation="vertical"
@@ -31,14 +30,14 @@
                 android:text="Usuario"
                 android:id="@+id/textUsuario"
                 android:textSize="16sp"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/black"/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10sp"
                 android:id="@+id/etUsuario"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/black"
                 android:singleLine="true"/>
 
             <TextView
@@ -49,7 +48,7 @@
                 android:text="Contraseña"
                 android:id="@+id/textPass"
                 android:textSize="16sp"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/black"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -59,7 +58,7 @@
                 android:inputType="textPassword"
                 android:ems="10"
                 android:id="@+id/etPass"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/black"/>
 
             <Button
                 android:layout_width="match_parent"
@@ -70,7 +69,7 @@
                 android:id="@+id/bLogin"
                 android:layout_marginTop="25dp"
                 android:textColor="@android:color/white"
-                android:background="#5CB860"/>
+                android:background="@color/colorPrimary"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -80,7 +79,8 @@
                 android:layout_gravity="center"
                 android:text="¿Has olvidado tu contraseña?"
                 android:id="@+id/tvRecuperarPass"
-                android:textColor="@android:color/holo_blue_light"/>
+                android:textColorLink="@android:color/holo_blue_light"
+                android:textIsSelectable="false"/>
 
             <CheckBox
                 android:layout_width="wrap_content"
@@ -91,8 +91,8 @@
                 android:text="Mantener Conectado"
                 android:id="@+id/cbConectado"
                 android:checked="false"
-                android:textColor="@android:color/white"
-                android:buttonTint="#5CB860"/>
+                android:textColor="@android:color/black"
+                android:buttonTint="#357423"/>
         </LinearLayout>
     </ScrollView>
 
