--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#5CB860</color>
+    <color name="colorPrimary">#357423</color>
     <color name="colorPrimaryDark">#3B651D</color>
-    <color name="colorAccent">#5CB860</color>
+    <color name="colorAccent">#805CB860</color>
 </resources>
