--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -6,20 +6,151 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Controlador.Home"
-    tools:showIn="@layout/app_bar_home">
+    tools:showIn="@layout/app_bar_home"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin">
 
-    <TextView
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/header_layout"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:paddingBottom="16sp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="¿Cómo te encuentras hoy?"
+            android:id="@+id/tv_1"
+            android:textSize="24sp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Inicio"
-        android:id="@+id/tvPrueba"
-        android:layout_alignParentTop="true"
+        android:text="Ayudanos rellenando las encuestas sobre como te sientes todos los días."
+        android:id="@+id/tv_phrase"
+        android:layout_below="@+id/tv_1"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:textSize="30sp"/>
+        android:layout_alignParentStart="true"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="Ver encuestas"
+            android:textColor="@android:color/white"
+            android:background="@color/colorPrimary"
+            android:layout_marginTop="91dp"
+            android:paddingRight="16sp"
+            android:paddingLeft="16sp"
+            android:id="@+id/b_surveys"
+            android:layout_below="@+id/tv_phrase"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
+    <View android:id="@+id/first_divider"
+          android:layout_height="2dp"
+          android:layout_width="fill_parent"
+          android:background="@color/colorPrimaryDark"
+          android:layout_below="@+id/header_layout"
+          android:layout_alignParentRight="true"
+          android:layout_alignParentEnd="true"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignTop="@+id/first_divider"
+        android:id="@+id/home_calendar"
+        android:paddingTop="16sp"
+        android:paddingBottom="32sp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mi Calendario"
+            android:id="@+id/tv_calendar"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textSize="24sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Info Calendario"
+            android:id="@+id/tv_info_calendar"
+            android:layout_below="@+id/tv_calendar"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ver"
+            android:id="@+id/b_calendar"
+            android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
+
+    <View android:id="@+id/secondDivider"
+          android:layout_height="2dp"
+          android:layout_width="fill_parent"
+          android:background="@color/colorPrimaryDark"
+          android:layout_below="@+id/home_calendar"
+          android:layout_alignParentRight="true"
+          android:layout_alignParentEnd="true"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignTop="@+id/secondDivider"
+        android:id="@+id/home_medication"
+        android:paddingTop="16sp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mi medicación"
+            android:id="@+id/tv_medication"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:textSize="24sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Info Medication"
+            android:id="@+id/tv_info_medication"
+            android:layout_below="@+id/tv_medication"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ver"
+            android:id="@+id/button2"
+            android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"
+            android:layout_alignBottom="@+id/tv_info_medication"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"/>
+
+    </RelativeLayout>
+
+
 </RelativeLayout>
