--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="¿Cómo te encuentras hoy?"
-            android:id="@+id/tv_1"
+            android:id="@+id/tv_greeting_home"
             android:textSize="24sp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:text="Ayudanos rellenando las encuestas sobre como te sientes todos los días."
         android:id="@+id/tv_phrase"
-        android:layout_below="@+id/tv_1"
+        android:layout_below="@+id/tv_greeting_home"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
