--- a/app/src/main/res/layout/content_surveys.xml
+++ b/app/src/main/res/layout/content_surveys.xml
@@ -6,19 +6,168 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".Controlador.Surveys"
-    tools:showIn="@layout/app_bar_surveys">
+    tools:showIn="@layout/app_bar_surveys"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin">
 
-    <TextView
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Encuestas"
-        android:id="@+id/textView7"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:id="@+id/scrollView2">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <RelativeLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/header_layout"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
+                android:paddingBottom="16sp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Has completado todas las encuestas hoy"
+                    android:id="@+id/tv_info_surveys"
+                    android:textSize="18sp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
+
+            </RelativeLayout>
+
+            <View android:id="@+id/first_divider"
+                  android:layout_height="2dp"
+                  android:layout_width="fill_parent"
+                  android:background="@color/colorPrimaryDark"
+                  android:layout_below="@+id/header_layout"
+                  android:layout_alignParentRight="true"
+                  android:layout_alignParentEnd="true"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignTop="@+id/first_divider"
+                android:id="@+id/first_survey"
+                android:paddingTop="16sp"
+                android:paddingBottom="32sp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Primera encuesta del día"
+                    android:id="@+id/tv_fs_title"
+                    android:textSize="24sp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Info encuesta"
+                    android:id="@+id/tv_info_fs"
+                    android:layout_below="@+id/tv_fs_title"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Realizar"
+                    android:id="@+id/b_fs"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@android:color/white"
+                    android:layout_below="@+id/tv_info_fs"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="16sp"/>
+
+            </RelativeLayout>
+
+            <View android:id="@+id/secondDivider"
+                  android:layout_height="2dp"
+                  android:layout_width="fill_parent"
+                  android:background="@color/colorPrimaryDark"
+                  android:layout_below="@+id/first_survey"
+                  android:layout_alignParentRight="true"
+                  android:layout_alignParentEnd="true"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_alignTop="@+id/secondDivider"
+                android:id="@+id/second_survey"
+                android:paddingTop="16sp"
+                android:paddingBottom="16sp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Segunda encuesta del día"
+                    android:id="@+id/tv_ss_title"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:textSize="24sp"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Info Encuesta"
+                    android:id="@+id/tv_info_ss"
+                    android:layout_below="@+id/tv_ss_title"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Realizar"
+                    android:id="@+id/b_ss"
+                    android:background="@color/colorPrimary"
+                    android:textColor="@android:color/white"
+                    android:layout_below="@+id/tv_info_ss"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="16sp"/>
+            </RelativeLayout>
+
+            <View android:id="@+id/thirdDivider"
+                  android:layout_height="2dp"
+                  android:layout_width="fill_parent"
+                  android:background="@color/colorPrimaryDark"
+                  android:layout_below="@+id/second_survey"
+                  android:layout_alignParentRight="true"
+                  android:layout_alignParentEnd="true"/>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/thirdDivider"
+                android:paddingTop="16sp"
+                android:id="@+id/survey_last_days">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Encuestas de los últimos días"
+                    android:id="@+id/tv_title_h"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:textSize="18sp"/>
+
+            </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
+
 </RelativeLayout>
