--- a/app/src/main/res/layout/activity_encuesta_estado_fisico.xml
+++ b/app/src/main/res/layout/activity_encuesta_estado_fisico.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,17 +8,23 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Controlador.Medication"
-    tools:showIn="@layout/app_bar_medication">
+    tools:context=".Controlador.PreguntasEncuestas.EncuestaEstadoFisico">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="medicación"
-        android:id="@+id/textView4"
+        android:text="¿Cual es tu estado físico?"
+        android:id="@+id/tv_header_estado_fisico"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirmar"
+        android:id="@+id/b_confirmar_estado_fisico"
+        android:layout_below="@+id/tv_header_estado_fisico"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 </RelativeLayout>
