--- a/app/src/main/res/layout/content_calendar.xml
+++ b/app/src/main/res/layout/content_calendar.xml
@@ -10,15 +10,15 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Controlador.Calendar"
+    tools:context=".Controlador.Calendario"
     tools:showIn="@layout/app_bar_calendar">
 
-    <TextView
+    <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/calendar1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calendario"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"></LinearLayout>
+
 </RelativeLayout>
